# mecraft

./: .gitignore  CMakeLists.txt  input-system-design.md  main.cpp  physics-system-design.md  readme.md
.github/workflows/: cmake-single-platform.yml
assets/config/: blocks.json  keybindings.txt
assets/shaders/: break_overlay.fs  break_overlay.vs  chunk.fs  chunk.vs  chunk_lit.vs  crosshair.vs  cube.fs  cube.vs  inventory.fs  inventory.vs  outline.fs  outline.vs  particle.fs  particle.vs  postprocess.fs  postprocess.vs  text.fs  text.vs
src/audio/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  BgmSystem.cpp  BgmSystem.h
src/core/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameStateMachine.cpp  GameStateMachine.h  IGameState.h  InputContextManager.cpp  InputContextManager.h  InputManager.cpp  InputManager.h  Time.cpp  Time.h  Window.cpp  Window.h
src/core/states/: CommandState.h  GameplayModeRules.h  GameplayState.h  UIState.h
src/particle/: ParticleSystem.cpp  ParticleSystem.h
src/physics/: PhysicsInfo.h  PhysicsSystem.cpp  PhysicsSystem.h  Ray.h
src/player/: ActionMap.cpp  ActionMap.h  Inventory.cpp  Inventory.h  Player.cpp  Player.h
src/renderer/: ChunkMesher.cpp  ChunkMesher.h  ChunkMeshingService.cpp  ChunkMeshingService.h  DropRenderer.cpp  DropRenderer.h  LightmapGenerator.cpp  LightmapGenerator.h  PostProcessRenderer.cpp  PostProcessRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TestCube.cpp  TestCube.h  stb_image.cpp
src/resource/: ResourceMgr.cpp  ResourceMgr.h
src/ui/: BitmapFont.h  ConsoleDisplayBox.cpp  ConsoleDisplayBox.h  Dashboard.cpp  Dashboard.h  KeyboardInputBox.cpp  KeyboardInputBox.h  UIRenderer.cpp  UIRenderer.h
src/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  DropSystem.cpp  DropSystem.h  LightEngine.cpp  LightEngine.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
tests/: audio_test.cpp  bitmap_font_layout_test.cpp  drop_system_test.cpp  keyboard_input_box_test.cpp  ore_sampling_perf_test.cpp  physics_mvp_test.cpp  terrain_perf_test.cpp  world_flat_test.cpp
tests/perf_baselines/: sample_ore_block_baseline.json  sample_ore_block_round1.json  sample_ore_block_round2_column_cache.json
